# GravNN

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  computeAccelerations.py  environment.yml  explore_hyperparameters.ipynb  main.py  nn_maps.py  peppers_nn.ipynb  peppers_script.py  performRegression.py  plot_hyperparameter_inst.py  plot_hyperparameters.py  plot_hyperparameters_nb.ipynb  plot_hyperparameters_search.py  plot_nn_maps.py  plot_regression.py  plot_sh_maps.py  plot_square_wave.py  plot_training_data.py  plot_training_data_on_map.py  pyproject.toml  run_acceleration.py  run_hyperparameter_inst.py  run_hyperparameters.py  run_hyperparameters_search.py  run_regression.py  search_hyperparams_fast_set.py  search_hyperparams_min_set.py  setup.py  sh_maps.py  tensorboard_run.ipynb  train_NN.py
.github/workflows/: default.yml
AccelerationAlgs/: AccelerationBase.py  BSK.py  SphericalHarmonics.py
C_Algorithms/: CMakeLists.txt
C_Algorithms/PinesAlgorithm/: CMakeLists.txt  PinesAlgorithm.cpp  PinesAlgorithm.h  PinesAlgorithm.i  test.py
C_Algorithms/Regression/: CMakeLists.txt  Regression.cpp  Regression.h  Regression.i
C_Algorithms/swigModules/: swig_common_model.i
CelestialBodies/: CelestialBodyBase.py  Planets.py
Clustering/: clustering.py
Examples/: analyze_network.py  load_network.py  plot_gravity_map.py  train_network.py
GravNN/: LICENSE  requirements.txt
GravNN/Analysis/: AccelerationHistogram.py  AltitudeNetworkOutput.py  AsteroidAnalyzer.py  BrillouinMapAccelerations.py  CompactnessExperiment.py  DataInterface.py  ExperimentBase.py  ExtrapolationExperiment.py  MetricsExperiment.py  NetworkOutputExperiment.py  PlanesExperiment.py  PlanetAnalyzer.py  PredictionDistributionExperiment.py  SphHarmEquivalenceExperiment.py  SurfaceExperiment.py  TimeEvaluationExperiment.py  TimePredictionExperiment.py  TrajectoryExperiment.py  __init__.py
GravNN/C_Algorithms/: CMakeLists.txt
GravNN/C_Algorithms/PinesAlgorithm/: CMakeLists.txt  PinesAlgorithm.cpp  test.py
GravNN/C_Algorithms/Regression/: Regression.cpp  Regression.h
GravNN/CelestialBodies/: Asteroids.py  Planets.py  __init__.py
GravNN/GravityModels/: BSK.py  ELM.py  GravityModelBase.py  HeterogeneousPoly.py  Mascons.py  NN_Base.py  PinesAlgorithm.py  PinesAlgorithmModule.py  PointMass.py  Polyhedral.py  Polyhedral_2.py  SphericalHarmonics.py  __init__.py
GravNN/Networks/: Activation.py  Activations.py  Analysis.py  Annealing.py  Augmentation.py  Callbacks.py  Compression.py  Constraints.py  Data.py  Layers.py  Losses.py  Model.py  Networks.py  Plotting.py  Saver.py  Schedules.py  layers.py  model.py  model_keras.py  networks.py  script_utils.py  utils.py  utils_tf.py
GravNN/Preprocessors/: DummyScaler.py  MinMaxStandardTransform.py  MinMaxTransform.py  QuantileTransform.py  UniformScaler.py  __init__.py
GravNN/Regression/: BLLS.py  ELM.py  ELMRegressor.py  MasconRegressor.py  NN.py  RLLS.py  RLLS_Ridge.py  Regression.py  SGD.py  SHRegression.py  XuLS.py  utils.py
GravNN/Support/: FrozenOrbitUtils.py  GravBodyInterface.py  Grid.py  PathTransformations.py  ProgressBar.py  Regression.py  RigidBodyKinematics.py  StateObject.py  Statistics.py  batches.py  slurm_utils.py  transformations.py  transformations_tf.py
GravNN/Trajectories/: CompositeDist.py  CustomDist.py  DHGridDist.py  EphemerisDist.py  ExponentialDist.py  FibonacciDist.py  GaussianDist.py  PlanesDist.py  RandomAsteroidDist.py  RandomDist.py  Reduced3dDist.py  ReducedGridDist.py  ReducedRandDist.py  SurfaceDHGridDist.py  SurfaceDist.py  TrajectoryBase.py  UniformDist.py  __init__.py  utils.py
GravNN/Visualization/: AccMagSortVisualizer.py  AsteroidSurfaceVisualizer.py  CompactnessVisualizer.py  DataVisSuite.py  DataVisualization.py  ErrorMapVisualizer.py  ExtrapolationVisualizer.py  FigureSupport.py  Grid.py  HeatmapVisualizer.py  HistoryVisualizer.py  MapBase.py  MapVisSuite.py  MapVisualization.py  NetworkPredictionsVisualizer.py  PlanesVisualizer.py  PolyVisEdits.py  PolyVisualization.py  SphHarmEquivalenceVisualizer.py  SurfaceVisualizer.py  TrainingDistributionVisualizer.py  TrajectoryVisualizer.py  VisualizationBase.py  WeightsVisualization.py
GravityModels/: ArtificialModel.py  BSK.py  GravityModelBase.py  NN_Base.py  SphericalHarmonics.py
GravityModels/NNSupport/: NN_Conv.py  NN_DeepLayers.py  NN_MultiLayers.py  NN_RBF.py  NN_SingleLayers.py  NN_hyperparam.py  SupportFunc.py
NN/: NN_Base.py  NN_DeepLayers.py
Notebooks/: SH_Acceleration.ipynb  plotting_routines.ipynb
Preprocessors/: MaxAbsTransform.py  MinMaxStandardTransform.py  MinMaxTransform.py  PreprocessorBase.py  Projections.py  QuantileTransform.py  RobustTransform.py  StandardTransform.py  Transformations.py
Scripts/Comparison/: experiment_setup.py  extract_metrics.py  interfaces.py  train.py  train_HPC.py
Scripts/Configs/: Asteroid_Config.py  Earth_Random_Config.py  Exp_Config.py
Scripts/Data/: generate_bennu_data.py  generate_data.py  generate_earth_data.py  generate_eros_data.py  generate_eros_trajectory_data.py  generate_network_speed_data.py  generate_planes_data.py  generate_random_data.py  generate_surface_data.py
Scripts/Experiments/: earth_revisited_experiment.py  eros_HF_experiment.py  fourier_experiment.py  lr_annealing_experiment.py  pinn_III_modifications_experiment.py  pinn_generation_experiment.py
Scripts/Figures/: LEO_distribution_RSE_plot.py  acceleration_distributions.py  bennu_poly.py  bennu_poly_3d.py  compactness_sample_efficiency.py  composite_alt_plot.py  composite_distribution_plot.py  earth_rse.py  earth_rse_1d.py  hparams_parallel_coordinates.py  loss_plots.py  model_speed.py  model_speed_plot.py  plot_sh_rse.py  (+2 more)
Trajectories/: DHGridDist.py  RandomDist.py  Reduced3dDist.py  ReducedGridDist.py  TrajectoryBase.py  UniformDist.py
Visualization/: CoefficientVisualization.py  Grid.py  MapVisualization.py  MapVizFunctions.py  NNVisualization.py  StateObject.py  StateVisualization.py  VisualizationBase.py
support/: GravBodyInterface.py  generateGravityFiles.py  transformations.py
tests/: test_examples.py
(+438 files in other folders)
